Fix image cut off

--- a/css/sass/partials/_img-loading.scss
+++ b/css/sass/partials/_img-loading.scss
@@ -35,7 +35,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       // border-radius: 1rem;
       box-shadow: none;
     }
